<resources>
    <string name="app_name">ProyectoCriminal</string>
    <string name="pista_titulo_crimen">Ingrese un título para el crimen</string>
    <string name="etiqueta_titulo_crimen">Título</string>
    <string name="etiqueta_detalle_crimen">Detalles</string>
    <string name="etiqueta_crimen_resuelto">Resuelto</string>
    <string name="titulo_date_picker">Fecha del crimen</string>
    <string name="mostrar_subtitulo">Mostrar subtitulos</string>
    <string name="ocultar_subtitulos">Ocultar subtitulos</string>
    <string name="formato_subtitulo">%1$d crimenes</string>
    <string name="nuevo_crimen">Nuevo crimen</string>
    <string name="boton_sospechoso">Seleccionar sospechoso</string>
    <string name="boton_reporte">Enviar reporte criminal</string>
    <string name="reporte_Crimen">%1$s! El crimen fue descubierto en %2$s. %3$s y %4$s.</string>
    <string name="reporte_resuelto">El caso esta resuelto</string>
    <string name="reporte_no_resuelto">El caso no esta resuelto</string>
    <string name="reporte_sin_sospechoso">no hay sospechoso</string>
    <string name="reporte_con_sospechoso">el sospechoso es %s.</string>
    <string name="reporte_asunto">Reporte del crimen</string>
    <string name="enviar_reporte">Enviar reporte del crimen vía</string>
</resources>